fix(about14): maintain left alignment for subtitle when image is present

--- a/editor-components/about/about14/about14.module.scss
+++ b/editor-components/about/about14/about14.module.scss
@@ -42,7 +42,8 @@
                     align-items: flex-start;
 
                     .subtitle {
-                        margin-left: 0;
+                        margin-left: 0 !important;
+                        margin-right: 0 !important;
                     }
 
                     .title {
